Adding login and register modules
